frontend/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-deployment
  labels:
    app: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: 211125549407.dkr.ecr.us-east-1.amazonaws.com/kubes:fro   # <-- Replace with your image
        ports:
        - containerPort: 80
