frontend/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  type: ClusterIP
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
